--- a/front/src/translations/en.json
+++ b/front/src/translations/en.json
@@ -2,5 +2,6 @@
   "home": "Home",
   "listPub": "All publications",
   "pub": "Publication",
-  "404notFound": "404 Page not found"
+  "404notFound": "404 Page not found",
+  "moreInfo": "Learn more"
 }
