--- a/front/src/translations/fr.json
+++ b/front/src/translations/fr.json
@@ -2,5 +2,6 @@
   "home": "Accueil",
   "listPub": "Toutes les publications",
   "pub": "Publication",
-  "404notFound": "404 Page non trouvé"
+  "404notFound": "404 Page non trouvé",
+  "moreInfo": "En savoir plus"
 }
