--- a/front/src/translations/en.json
+++ b/front/src/translations/en.json
@@ -3,5 +3,6 @@
   "listPub": "All publications",
   "pub": "Publication",
   "404notFound": "404 Page not found",
-  "moreInfo": "Learn more"
+  "moreInfo": "Learn more",
+  "by": "By"
 }
