--- a/front/src/translations/fr.json
+++ b/front/src/translations/fr.json
@@ -3,5 +3,6 @@
   "listPub": "Toutes les publications",
   "pub": "Publication",
   "404notFound": "404 Page non trouvé",
-  "moreInfo": "En savoir plus"
+  "moreInfo": "En savoir plus",
+  "by": "Par"
 }
